--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1",
     "html-webpack-plugin": "^5.5.3",
+    "copy-webpack-plugin": "^11.0.0",
     "ts-loader": "^9.4.4",
     "css-loader": "^6.8.1",
     "style-loader": "^3.3.3",
